Beginning to separate chaiscript hooks. Adding Parallax editor.

--- a/VSProjects/MutedVision/MutedVision_Common.vcxitems.filters
+++ b/VSProjects/MutedVision/MutedVision_Common.vcxitems.filters
@@ -148,6 +148,9 @@
       <Filter>MV\Utility</Filter>
     </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\Source\MV\Interface\tapDevice.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\Source\MV\Render\Scene\parallax.cpp">
+      <Filter>MV\Render\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\Source\MV\ArtificialIntelligence\pathfinding.h">
@@ -349,5 +352,8 @@
       <Filter>MV</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\Source\MV\Interface\tapDevice.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\Source\MV\Render\Scene\parallax.h">
+      <Filter>MV\Render\Scene</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
