--- a/VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/build.gradle.template
+++ b/VSProjects/BindstoneClient/BindstoneClient_AndroidGradle/app/build.gradle.template
@@ -7,7 +7,8 @@ android {
     defaultConfig.with {
         $(ApplicationId)
         minSdkVersion = 21
-        targetSdkVersion = 29
+        targetSdkVersion = 23
+        compileSdkVersion = 29
         multiDexEnabled true
     }
     
@@ -43,7 +44,7 @@ android {
     flavorDimensions "default"
     productFlavors {
 	    create("arm7") {
-            ndk.abiFilters 'armeabi-v7a'
+            ndk.abiFilters 'armeabi-v7a', 'armeabi'
         }
         create("arm8") {
             ndk.abiFilters 'arm64-v8a'
